--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-notifications-component": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-lazy-load-image-component": "^1.5.1",
+    "@types/react-notifications-component": "^2.4.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7"
   }
