--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.10",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-lazy-load-image-component": "^1.5.1",
