--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-streamer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Jashwanth459.github.io/web-stream-new",
+  "homepage": "https://Jashwanth459.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
